finished single value crud routes

--- a/todo.txt
+++ b/todo.txt
@@ -1,12 +1,10 @@
 backlog
 -----------------------
 validation
-
 style
 test hosted versions
 get rows from api 
 fix grid code
-fix redudant uses of any
 fix login bug
 rollback (maybe)
 
@@ -15,5 +13,7 @@ in progress
 ----------------------
 ui design 
 add more routes for api 
-
 single item routes
+user auth routes
+fix redudant uses of any
+api response log saved to json
