finished status page mvp

--- a/todo.txt
+++ b/todo.txt
@@ -2,6 +2,8 @@ backlog
 -----------------------
 test hosted versions
 rollback (maybe)
+fix spacing on status page (low priority)
+add not found comp
 
 in progress
 ----------------------
@@ -13,4 +15,4 @@ loading logic
 get rows from api 
 validation
 documentation page 
-status page
+
