added validation / create row from ui

--- a/todo.txt
+++ b/todo.txt
@@ -4,8 +4,10 @@ test hosted versions
 rollback (maybe)
 fix spacing on status page (low priority)
 rerender inner sidebar on model creation
-ignore dashboard res
+ignore dashboard res / rix redudnant calls
 2 small project to show dashboard works
+reload after create (reload hook maybe)
+tidy/refactor
 
 in progress
 ----------------------
@@ -13,6 +15,5 @@ UI work
 style
 
 loading logic
-validation
 documentation page 
 
