--- a/todo.txt
+++ b/todo.txt
@@ -6,6 +6,8 @@ better loading in general but specifically on singls / users page
 api logs in reverse 
 add sort by date to api logs
 flesh out documentation / fix post pill component
+users array empty print no users
+fix over use of Item type
 
 in progress
 ----------------------
@@ -15,7 +17,7 @@ test hosted versions
 ignore dashboard res / set limit to saved requests
 2 small project to show dashboard works
 tidy/refactor
-crud single
+single update delete redo / singles ui 
 can create collection without any properties
 
 
