--- a/todo.txt
+++ b/todo.txt
@@ -5,8 +5,7 @@ change how the singles / users page looks
 better loading in general but specifically on singls / users page
 api logs in reverse 
 add sort by date to api logs
-flesh out documentation / fix post pill component
-users array empty print no users
+flesh out documentation 
 fix over use of Item type
 
 in progress
@@ -17,7 +16,6 @@ test hosted versions
 ignore dashboard res / set limit to saved requests
 2 small project to show dashboard works
 tidy/refactor
-single update delete redo / singles ui 
 can create collection without any properties
 
 
