--- a/todo.txt
+++ b/todo.txt
@@ -1,9 +1,7 @@
 backlog
 -----------------------
 inner side bar min width
-change how the singles / users page looks
 better loading in general but specifically on singls / users page
-api logs in reverse 
 add sort by date to api logs
 flesh out documentation 
 fix over use of Item type
@@ -13,9 +11,9 @@ in progress
 UI work
 style
 test hosted versions
-ignore dashboard res / set limit to saved requests
 2 small project to show dashboard works
 tidy/refactor
-can create collection without any properties
 
+when boolean is added from the dashboard it is added as a string because it is stringified to show up in the UI
+need to be able to read real boolean from db and then change it to a string for the UI
 
