--- a/todo.txt
+++ b/todo.txt
@@ -13,5 +13,8 @@ style
 test hosted versions
 2 small project to show dashboard works
 tidy/refactor
-
+configure peers 
+rich text box in model create
+two different cms for both project in different browsers
+disccuss translation
 
