sanitize html function for rich text

--- a/todo.txt
+++ b/todo.txt
@@ -18,3 +18,4 @@ two different cms for both project in different browsers
 disccuss translation
 handle large text body
 purify html before adding to db 
+redo encryption with aes 
