--- a/todo.txt
+++ b/todo.txt
@@ -9,10 +9,14 @@ in progress
 UI work
 style
 test hosted versions
-2 small project to show dashboard works
-two different cms for both project in different browsers
 disccuss translation
 tidy/refactor
 change Item type to row
 better loading in general but specifically on singls / users page
 flesh out documentation 
+folders are loaded at build time not refreshed
+users propigate really slowly
+
+fix saved responses
+review all of singles page work
+api validation (compare body to model ensure they match)
